[package]
name = "preflight"
version = "0.9.4"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
# TODO: base64 and thiserror are also used by the CLI,
#       should we make them workspace dependencies?
base64 = { workspace = true }
thiserror = { workspace = true }
libc = "0.2.147"
sha2 = { workspace = true }
soroban-env-host = { workspace = true }
