[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "88bf5c3d92531ad6aafa9b7b1bd90e170c48826d", features = ["experimental_spec_shaking_v2"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
