[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "8055e797c4b3f1630de9f8a3bb0a99b3c3158ea5", features = ["experimental_spec_shaking_v2"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
