[package]
name = "test_hello_world"
version = "22.0.0-rc.1"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "=21.7.2" }

[dev-dependencies]
soroban-sdk = { version = "=21.7.2", features = ["testutils"]}
