[package]
name = "test_token"
version.workspace = true
description = "Soroban standard token contract"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "=21.7.2" }
soroban-token-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "=21.7.2", features = ["testutils"] }
